# UltiBotInversiones

./: .coverage  .dockerignore  .env  .env.example  .env.test  .gitignore  .pylintrc  AI_ORCHESTRATOR_ACTIVATION_COMPLETE.md  API.txt  API_Keys.txt  AUDIT_MORTEN.md  AUDIT_REPORT.md  AUDIT_REPORT_JULES.md  AUDIT_TASK.md  AUDIT_TASK_JULES.md  CONSEJOS.md  CONSEJOS_GEMINI.MD  DEBT_LOG.md  DEPLOYMENT_FIXES_TRACKING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DOCKER_README.md  Dockerfile  Dockerfile.frontend  OPERACION_RELOJ_ATOMICO_OPTICO_RESUMEN.md  PLAN_DE_ACCION_DESPLIEGUE.md  PLAN_RESOLUCION_TESTS.md  PM_CHECKLIST.md  PROJECT_LOG.md  README.md  SRST_PROGRESS.md  SRST_TRACKER.md  Software_Ingeniering.md  System_PromptV4.0.md  Systemprompt-potencial.md  Systemprompt.v1.0.md  Systemprompt.v2.0.md  Systemprompt.v3.0.md  Systemprompt.v4.0.md  Systemprompt.v4.5.md  (+37 more)
.ai/: TODO-revert.md
.clinerules/: Budget-1.2.md  Buen-codigo-IA.md  Oraculo-protocol.md  Tejedor-protocol.md  Token-limit-300k.md  Token-limit-40k.md  UI_Systemprompt.v1.0.md  async-testing-best-practices.md  audit-context-preservation.md  debugging-agent-protocol.md  debugging-emergency-protocols.md  devops-protocol.md  fixtures-consistency-enforcer.md  lead-coder-protocol.md  lead-data-scientist-protocol.md  limitar_tokens_350k_newtask.md  pytest-debugging-mastery.md  self-improving-cline.md  sodr-deployment-system.md  srst-segmented-resolution-system.md  test-data-validation.md  token-limit.md  ui-ux-maestro-protocol.md  workspace.rules.md
.clinerules/workflows/: Handoff+Sequential+Avances.md  dev-agent-workflow.md  front-agent-workflow.md  nuevatareas.md  sm-agent-workflow.md
.gemini/: GEMINI.md  settings.json
Diagrama/: diagrama_despliegue.md
SRST_TICKETS/SRST-001/: description.md
SRST_TICKETS/SRST-002/: description.md
SRST_TICKETS/SRST-003/: description.md
SRST_TICKETS/SRST-004/: description.md
SRST_TICKETS/SRST-005/: description.md
SRST_TICKETS/SRST-006/: description.md
SRST_TICKETS/SRST-007/: description.md
SRST_TICKETS/SRST-008/: description.md
SRST_TICKETS/SRST-009/: description.md
SRST_TICKETS/SRST-010/: description.md
SRST_TICKETS/SRST-011/: description.md
SRST_TICKETS/SRST-012/: description.md
SRST_TICKETS/SRST-013/: description.md
SRST_TICKETS/SRST-014/: description.md
SRST_TICKETS/SRST-015/: description.md
SRST_TICKETS/SRST-016/: description.md
SRST_TICKETS/SRST-017/: description.md
SRST_TICKETS/SRST-018/: description.md
SRST_TICKETS/SRST-019/: description.md
SRST_TICKETS/SRST-020/: description.md
SRST_TICKETS/SRST-021/: description.md
SRST_TICKETS/SRST-022/: description.md
SRST_TICKETS/SRST-023/: description.md
SRST_TICKETS/SRST-024/: description.md
SRST_TICKETS/SRST-025/: description.md
SRST_TICKETS/SRST-026/: description.md
SRST_TICKETS/SRST-027/: description.md
SRST_TICKETS/SRST-028/: description.md
SRST_TICKETS/SRST-029/: description.md
SRST_TICKETS/SRST-030/: description.md
SRST_TICKETS/SRST-031/: description.md
SRST_TICKETS/SRST-032/: description.md
SRST_TICKETS/SRST-033/: description.md
SRST_TICKETS/SRST-034/: description.md
SRST_TICKETS/SRST-035/: description.md
SRST_TICKETS/SRST-036/: description.md
SRST_TICKETS/SRST-037/: description.md
SRST_TICKETS/SRST-038/: description.md
SRST_TICKETS/SRST-039/: description.md
SRST_TICKETS/SRST-1307/: description.md
SRST_TICKETS/SRST-1308/: description.md
SRST_TICKETS/SRST-1309/: description.md
SRST_TICKETS/SRST-1310/: description.md
SRST_TICKETS/SRST-1311/: description.md
SRST_TICKETS/SRST-1312/: description.md
SRST_TICKETS/SRST-1313/: description.md
bmad-agent/: ide-bmad-orchestrator.cfg.md  ide-bmad-orchestrator.md
data/: scan_presets.json
docker/: frontend-entrypoint.sh  supervisord.conf  vnc-startup.sh  wait-for-it.sh  xfce-startup.sh
docs/: Architecture.md  Epicas.md  Epics.md  Instrucciones.md  PRD.md  Project Brief.md  Project Brief_UltiBotInversiones.md  adding-new-strategies-guide.md  agent-system-architecture.md  api-reference.md  component-view.md  data-models.md  environment-vars.md  epic-1.md  epic-2.md  epic-3.md  epic-4.md  epic-5.md  front-end-api-interaction.md  front-end-architecture.md  front-end-coding-standards.md  front-end-component-guide.md  front-end-project-structure.md  front-end-routing-strategy.md  front-end-state-management.md  front-end-style-guide.md  front-end-testing-strategy.md  frontend_architecture.md  index.md  infra-deployment.md  key-references.md  operational-guidelines.md  project-structure.md  sequence-diagrams.md  strategies-documentation.md  strategy-system-architecture.md  supabase_dns_configuration_guide.md  tech-stack.md  ui_component_library.md  ultibot_backend_review.md
gemini/: GEMINI.md
logs/: frontend.log.1  frontend.log.2  frontend.log.3
mcp_service/: .env.sample  Dockerfile  package.json  requirements.txt  tsconfig.json
memory/: API_CONTRACT_MAP.md  BACKEND_REFACTOR_MAP.md  CONTEXT.md  DEBT_LOG.md  DFU_CT_STRATEGY_MANAGEMENT.md  KNOWLEDGE_BASE.md  MIGRATION_PLAN_UI_WEB.md  PROJECT_LOG.md  TASKLIST.md  VALIDATION_CHECKLIST.md  action_task_evolution_2.0.md  auditoria_ultibot_inversiones_20250627.md  frontend_stability_strategy.md  roadmap_evolucion_2.0.md
scripts/: add_binance_credentials.py  build_docker_image.sh  clean_test_file.py  fix_cline_shell_integration.ps1  launch_app.py  populate_user_config.py  pyqt_test.py  run_dev_container.sh  srst_triage.py  test_ai_api_integration.py  test_ai_orchestrator.py  test_api_client_offline.py  test_db_connection.py  test_main_window_integration.py  test_market_configuration_api.py  test_trading_ai_orchestrator.py  verify_aiosqlite.py  verify_market_data.py  verify_psycopg.py
src/: __init__.py  app_config.py  dependencies.py  main.py
supabase/: alternativas_conexiones.md  conexion_psql.md
test/: README.md  run_all_tests.py  run_quick_tests.bat  test_api_endpoints.py  test_backend_components.py  test_database_connection.py  test_environment_setup.py  test_frontend_components.py
tests/: __init__.py  conftest.py  run_story_4_4_tests.py
(+538 files in other folders)
