[tool.poetry]
name = "ultibotinversiones"
version = "0.1.0"
description = "Plataforma de trading personal avanzada y de alto rendimiento."
authors = ["BMad Agent <bmad@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.3.0" # Compatible con Pydantic 2.x
uvicorn = {extras = ["standard"], version = "^0.29.0"}
langchain-core = ">=0.3.62,<0.4.0"
langchain-google = "*"
langchain-community = "*"
supabase = "^2.4.0"
httpx = "^0.27.0"
websockets = "^12.0"
asyncpg = "^0.30.0"
cryptography = "^45.0.3"
psycopg = {extras = ["binary", "pool"], version = "^3.2.9"}
pyparsing = "^3.2.3"
PySide6 = "^6.7.0"
qdarkstyle = "^3.1"
pyqtgraph = "^0.13.3"
qasync = "^0.27.1"
python-dotenv = "^1.1.1"
protobuf = ">=4.21.0,<4.22.0"
numpy = "1.26.4"
python-dateutil = "2.8.2" # Fijado a una versión estable para compatibilidad con matplotlib
aiosqlite = "^0.21.0"
tenacity = "^9.1.2"
redis = "^5.0.0" # Añadir dependencia para Redis
mplfinance = "^0.12.10b0"
langchain-google-genai = "^2.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pre-commit = "*"
pylint = "^3.3.7"
pytest-qt = "^4.4.0"
pytest-timeout = "^2.3.1"
playwright = "^1.53.0"

[tool.poetry.scripts]
test = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "D",  # pydocstyle
    "B",  # flake8-bugbear
]
# ignore = [] # Specific rules to ignore

[tool.ruff.format]
# Ruff's formatter is Black-compatible by default.
# Options can be added here if specific deviations from Black are needed.
# quote-style = "double"
# indent-style = "space"
# skip-magic-trailing-comma = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
